Archive2/e9/5b25762d2fa701/output
+ g++-5.1 -std=c++11 -O0 -Wall -pedantic -Wextra -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:8:16: error: cannot bind 'int' lvalue to 'int&&'
     int &&rr = i;
                ^
